--- a/.env.example
+++ b/.env.example
@@ -5,9 +5,23 @@ APP_KEY=ThmQVusfeiiDgdEmkrSAqgO5lXQIhJsO
 DRIVE_DISK=local
 SESSION_DRIVER=cookie
 CACHE_VIEWS=false
+
 DB_CONNECTION=pg
 PG_HOST=localhost
 PG_PORT=5432
-PG_USER=lucid
+PG_USER=postgres
 PG_PASSWORD=
 PG_DB_NAME=lucid
+
+BULL_SERVER_PORT=22002
+BULL_CONNECTION=bull
+BULL_REDIS_DATABASE=1
+REDIS_URI=redis://127.0.0.1:6379/1
+BULL_REDIS_HOST=localhost
+BULL_REDIS_PORT=6379
+BULL_REDIS_PASSWORD=
+
+S3_KEY=
+S3_SECRET=
+S3_BUCKET=
+S3_REGION=
