--- a/package.json
+++ b/package.json
@@ -4,11 +4,17 @@
   "private": true,
   "scripts": {
     "dev": "node ace serve --watch",
-    "build": "node ace build --production",
-    "start": "node server.js",
+    "start": "node ace serve",
     "test": "node ace test",
     "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "debug": "node ace serve --watch --node-args='--inspect'",
+    "build": "node ace build --production; cp .env build/.env",
+    "ace": "node ace",
+    "ace-h": "node ace -h",
+    "routes": "node ace list:routes",
+    "db:setup": "node ace db:drop; node ace db:create; node ace migration:run; node ace db:seed",
+    "db:setup:win": "node ace db:drop && node ace db:create && node ace migration:run && node ace db:seed"
   },
   "eslintConfig": {
     "extends": [
@@ -51,7 +57,7 @@
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-adonis": "^2.1.1",
     "eslint-plugin-prettier": "^5.0.0",
-    "pino-pretty": "^10.2.0",
+    "pino-pretty": "^10.2.3",
     "prettier": "^3.0.3",
     "typescript": "~4.6",
     "webpack": "^5.88.2",
@@ -62,6 +68,7 @@
   "dependencies": {
     "@adonisjs/auth": "^8.2.3",
     "@adonisjs/core": "^5.9.0",
+    "@adonisjs/limiter": "^1.0.2",
     "@adonisjs/lucid": "^18.4.0",
     "@adonisjs/repl": "^3.1.11",
     "@adonisjs/session": "^6.4.0",
@@ -73,6 +80,7 @@
     "axios": "^1.5.0",
     "luxon": "^3.4.2",
     "pg": "^8.11.3",
+    "pretty-ms": "^8.0.0",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
