--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ BULL_REDIS_HOST=localhost
 BULL_REDIS_PORT=6379
 BULL_REDIS_PASSWORD=
 
-S3_KEY=AKIA5LNKP2MPQH6TUUMO
-S3_SECRET=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
-S3_BUCKET=ard-dev.brighthustle.in
-S3_REGION=ap-south-1
+S3_KEY=
+S3_SECRET=
+S3_BUCKET=
+S3_REGION=
