--- a/.env
+++ b/.env
@@ -25,3 +25,9 @@ S3_KEY=
 S3_SECRET=
 S3_BUCKET=
 S3_REGION=
+
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
+REDIS_URI=redis://127.0.0.1:6379/1
