--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@adonisjs/core": "^5.9.0",
     "@adonisjs/limiter": "^1.0.2",
     "@adonisjs/lucid": "^18.4.0",
+    "@adonisjs/redis": "^7.3.4",
     "@adonisjs/repl": "^3.1.11",
     "@adonisjs/session": "^6.4.0",
     "@adonisjs/shield": "^7.1.1",
